--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,6 +19,11 @@
                         <li>
                             <a href="https://github.com/haris-git/"><i class="fa fa-github fa-fw fa-3x"></i></a>
                         </li>
+                        <li>
+                            <a href="http://codepen.io/harislogo/"><i class="fa fa-codepen" aria-hidden="true"></i>
+</i></a>
+                        </li>
+                        
                     </ul>
                     <hr class="small">
                     <p class="text-muted">&copy; 2016</p>
