--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
                             <a href="https://github.com/haris-git/"><i class="fa fa-github fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="http://codepen.io/harislogo/"><i class="fa fa-codepen" aria-hidden="true"></i>
+                            <a href="http://codepen.io/harislogo/"><i class="fa fa-codepen fa-fw fa-3x"></i>
 </i></a>
                         </li>
                         
