--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1 text-center">
-        <h4><strong>Let's work together</strong>
+        <h4><strong>- Contact me -</strong>
         </h4>
         <ul class="list-unstyled">
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:harislogothetis@gmail.com.com">harislogothetis@gmail.com</a>
