--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <h4><strong>- Contact me -</strong>
         </h4>
         <ul class="list-unstyled">
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:harislogothetis@gmail.com.com">harislogothetis@gmail.com</a>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:harislogothetis@gmail.com">harislogothetis@gmail.com</a>
                         </li>
                     </ul>
                     <br>
